# 0.00.13 (59217) Dec 9, 2011
Added highlight for number line
Made number line maximum 6 instead of 12
Reduced the size of the number line dot from 6 to 5
Increased the size of the number line icon in the representation panel
Increased the size of the representation panel
Added borders for items in the representation panel
Increased font for representation and buttons/controls from 16 to 20
Limited the numerator based on the denominator so that the entire number is less than or equal to 6
# 0.00.12 (59189) Dec 8, 2011
Got rid of "click to toggle piece" feature
Rounded the corners for the fraction division bar
Increased pie size so that 6 pies fill the screen horizontally
Changed max denominator from 12 to 8
# 0.00.11 (58974) Dec 1, 2011
Added images from NP for spinner buttons
# 0.00.10 (58800) Nov 28, 2011
Increased the size of pie graphics
Add a border around number line circle
Highlight selected representation
Fixes for number line
# 0.00.09 (58684) Nov 16, 2011
Added more revisions for intro tab
Matching game: Added horizontal and vertical bars
# 0.00.08 (58036) Oct 26, 2011
Matching game: Removed decimals
# 0.00.07 (58023) Oct 26, 2011
Matching game: Added "six plus signs pattern"
Matching game: Added grid pattern
Matching game: Move object to the front when grabbed
Matching game: Prevent multiple objects from sitting on the same balance platform by moving off the object that has been there for the longest time
Matching game: Fixed: Scored nodes can be dragged
# 0.00.06 (57894) Oct 22, 2011
Improved look and randomization of fraction representations
Added balance and weight model
# 0.00.05 (57746) Oct 19, 2011
Matching Game tab: Fixed centering of fractions
Added other tabs
# 0.00.04 (57665) Oct 15, 2011
Added pie representation
# 0.00.03 (57658) Oct 14, 2011
Added percent representation
# 0.00.02 (57653) Oct 14, 2011
Added spinner control for fraction
Added toolbox for multiple representations
# 0.00.01 (57365) Oct 6, 2011